--- a/src/css/boardlist.css
+++ b/src/css/boardlist.css
@@ -1,11 +1,15 @@
-.Services-Cards {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-}
+
 .BoardsList {
   padding: 10px;
+  
+  font-weight: bold;
+  
+}
+.Board-Card{
+color: black;
+background-color: #6081B5;
+color: white;
+margin:1em;
 }
 
 .View-Board-Button {
@@ -19,19 +23,24 @@
   display: flex;
   flex-direction: column;
 }
+.Board-Card a {
+color: white;
+text-decoration: none;
+}
 .board-image {
   border: black solid;
-  width: 2rem;
-  height: 2rem;
-  float: left;
+  height: auto;
+  margin: auto;
+  width: 50%;
 }
 .board-info {
   float: right;
   display: flex;
   justify-content: end;
-  width: 80%;
+  width: 100%;
   height: 2rem;
   justify-content: space-between;
+  margin: auto;
 }
 .Create-Board-Button {
   display: flex;
@@ -41,3 +50,64 @@
   padding: 10;
   margin: 5%;
 }
+@media screen and (max-width: 500px) {
+  
+  .board-info{
+    display: block;
+    margin: auto;
+    height: auto;
+  }
+
+
+}
+@media screen and (min-width: 768px) {
+  
+  .board-info{
+    display: flex;
+    margin: auto;
+    height: auto;
+  }
+
+
+}
+@media screen and (max-width: 1200px) {
+ 
+}
+
+
+/* 
+@media screen and (max-width: 768px) {
+  .Board-List-Div {
+      width: 80%;
+      margin: auto;
+  }
+  .Board-Div{
+      width: 80%;
+      margin: auto;
+
+  }
+  .Board-Info{
+      height: 100%;
+      flex-direction: row;
+  }
+  .Board-Image{
+      height: auto;
+  }
+ 
+}
+@media screen and (max-width: 1024px) {
+  .Board-List-Div {
+      width: 80%;
+      margin: auto;
+  }
+ 
+}
+
+@media screen and (max-width: 1200px) {
+  .Board-List-Div {
+      width: 80%;
+      margin: auto;
+     display: none;
+  }
+ 
+} */
