--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -1,7 +1,8 @@
 .headImg {
-  height: 300px;
+  height: 25em;
   width: 100%;
   opacity: 60%;
+  padding : 1em
 }
 
 .headerImg-quote {
@@ -16,15 +17,50 @@
   transform: translate(-50%, -50%);
 }
 
-.boardsDiv {
-  display: flex;
-  justify-content: center;
-  margin: 20px;
-}
+
 .board-card {
   display: flex;
   justify-content: space-between;
   border: solid 1px black;
-  width: 30%;
-  margin: 10px;
+  width: 40%;
+  flex-direction: column;
+  margin: 1em;
+  color: #B38AAE;
+  
+  
 }
+.landingPage{
+  height: 100em;
+  
+}
+.boardsDiv{
+  border: 1px solid black;
+  margin: auto;
+  display: flex;
+  
+  justify-content: space-between;
+  flex-wrap: wrap;
+  
+}
+.viewButton{
+  background-color: #2F4858;
+  color: white;
+  font-weight: bolder;
+}
+
+@media screen and (max-width: 368px) {
+  
+  .boardsDiv{
+    width: 100%;
+    display: flex;
+    flex-direction:column;
+    flex-wrap: wrap;
+    margin: auto
+  }
+
+
+}
+/* 
+.cardName, .birth-death-div{
+
+} */
