--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -1,47 +1,32 @@
-/* .Board-Image{
-    border: 10px solid black;
-    width: 10em;
-    height: 12em;
-    float: left;
-    
+
+.boardPosts {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+
+  justify-content: space-between;
+
 }
-.Board-Div{
-    border: 10px solid black;
-    margin: 1em;
-}
-.Board-Person-Info{
-    border: 1px solid black;
-   
-    flex-direction: column;
-    display: flex;
-    
-    align-items: flex-start;
-    justify-content: space-between;
-   
-    
-}
-.Board-Add-Post-Button{
-    color: aqua;
-   float: right;
-   
-}
-.Name-and-Life{
-    border: 1px black solid;
-} */
 .Board-Posts-Div{
   background-image: url("../images/flowers.jpg") ;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 60rem
+  height: 60rem;
+  
 }
 
 .Board-Image {
-  border: 5px black solid;
-  height: 15em;
-  width:15em;
-  margin: auto;
+  /* border: 5px black solid; */
+  height: 20em;
+  width:20em;
+  /* margin: auto;
+  margin-right: 0; */
+}
+.Board-Image img {
+  width: 100%;
+  height: 100%;
 }
 
 .Board-Div {
@@ -53,27 +38,38 @@
   
 }
 .Board-Info {
-  padding: 2em;
-  height: 20em;
-  width: 50%;
-
-  display: block;
-  border: 1px solid black;
-  background-color: aliceblue;
+  padding-top: 0;
+  height: 100%;
+  width: 75%;
+  margin-left: 0;
+  /* background-color: aliceblue; */
+  text-align: left;
   
 }
 .Board-Button{
   width: 100%;
   height: 100%;
   margin: auto;
+  
 }
-.Title-And-Button {
+.Title {
+  margin-top: 0;
   display: block;
   width: 100%;
   justify-content: flex-start;
 
 }
-@media screen and (max-width: 480px) {
+.board-name {
+  margin-left: 20px;
+}
+.board-bob-dod {
+  margin-left: 20px;
+}
+.Board-Paragraph {
+  margin-left: 20px;
+  margin-top: 40px;
+}
+/* @media screen and (max-width: 480px) {
   
   .Board-Info{
     display: block;
@@ -83,36 +79,32 @@
   }
 
 
-}
-
+} */
+/* 
 @media screen and (max-width: 1000em) {
 
   .Board-Button{
-    height:25%;
+    height:100%;
     width: auto;
     margin: auto;
     display: flex;
     justify-content: center;
   }
-  .Title-And-Button {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    text-align: center;
+  .Title {
+    text-align: left;
     margin: auto;
     
   }
   .Board-Info{
     display: block;
-    margin: auto;
-    height: auto;
+    margin: 0;
+    height: 100%;
     width: 60%;
     
   }
-  
 
 
-}
+} */
 
 
 /* @media screen and (max-width: 480px) {
