--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -23,10 +23,10 @@
   justify-content: space-between;
   border: solid 1px black;
   width: 40%;
-  flex-direction: column;
+  flex-direction: row;
+  height: 150px;
   margin: 1em;
   color: #B38AAE;
-  
   
 }
 .landingPage{
@@ -34,11 +34,9 @@
   
 }
 .boardsDiv{
-  border: 1px solid black;
   margin: auto;
   display: flex;
-  
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   
 }
@@ -48,14 +46,29 @@
   font-weight: bolder;
 }
 
-@media screen and (max-width: 368px) {
+.cardImg{
+  max-height: 100%;
+  max-width: 200px;
+}
+
+@media screen and (max-width: 768px) {
   
-  .boardsDiv{
-    width: 100%;
-    display: flex;
-    flex-direction:column;
-    flex-wrap: wrap;
-    margin: auto
+
+  .board-card{
+    width: 80%;
+    flex-direction: column;
+
+
+  }
+  .cardImg{
+    display: none;
+  }
+
+  .headerImg-quote img{
+    height: 25%;
+  }
+  .headerImg-quote .quote{
+    font-size: small;
   }
 
 
