styling changes and pagination

--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -23,10 +23,14 @@
   width:20em;
   /* margin: auto;
   margin-right: 0; */
+  object-fit:scale-down;
+
 }
 .Board-Image img {
   width: 100%;
   height: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .Board-Div {
