--- a/src/css/UserData.css
+++ b/src/css/UserData.css
@@ -3,11 +3,15 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    
 }
 .user-posts-info{
     border: solid 1px black;
     margin: 10px;
     width: 25%;
+    background-color: #D8DAD3;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 @media screen and (max-width: 830px) {
