--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -2,21 +2,51 @@
     display: flex;
     flex-direction: column;
     width: 80%;
+    margin-top: 30px;
+    
 }
 .from-text-div {
     display: flex;
-    border: 1px solid grey;
+    border-radius: 5px;
     padding: 20px;
+    margin-top: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: #D8DAD3;
+
+
 
 }
 .from {
     margin-left: 0;
     min-width: 10%;
+    color: #479f76;
+
 }
 .post-file {
-    width: 40%;
+    min-width: 30%;
+    min-height: 300px;
+    max-width: 40%;
+    max-height: 300px;
     margin-right: 20px;
+    object-fit: scale-down;
+
 }
 .text {
     text-align: left;
+}
+
+@media screen and (max-width: 1024px) {
+    .from-text-div{
+        flex-direction: column;
+    }
+    .post-file {
+        min-width: 100%;
+        min-height: 300px;
+        max-width: 100%;
+        max-height: 300px;
+        object-fit:scale-down;
+    
+    }
+
+
 }
