--- a/src/css/UserData.css
+++ b/src/css/UserData.css
@@ -1,17 +1,24 @@
 .user-data {
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  margin: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-.user-posts-info{
-    border: solid 1px black;
-    margin: 10px;
-    width: 25%;
+.user-posts-info {
+  border: solid 1px black;
+  margin: 10px;
+  padding: 20px;
+  width: 25%;
+}
+
+.delete-button {
+  background-color: red;
+  color: white;
 }
 
 @media screen and (max-width: 830px) {
-    .user-posts-info{
-        width: 100%;
-    }
+  .user-posts-info {
+    width: 100%;
+  }
 }
