--- a/src/css/UserData.css
+++ b/src/css/UserData.css
@@ -6,22 +6,23 @@
   flex-wrap: wrap;
 }
 .user-posts-info {
-  border: solid 1px black;
+  display: inline-block;
   margin: 20px;
   padding: 20px;
-  width: 25%;
+  width: auto;
 }
 
 .user-boards-info {
   border: solid 1px black;
   margin: 20px;
   padding: 20px;
-  width: 25%;
+  width: auto;
 }
 
 .delete-button {
   background-color: red;
   color: white;
+  padding: 20px, 20px;
 }
 
 @media screen and (max-width: 830px) {
