--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -33,8 +33,13 @@
   border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-color: #D8DAD3;
+}
 
-  
+.board-info {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
 }
 .landingPage{
   height: 100em;
@@ -63,15 +68,24 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 768px) {
+.paginations {
+  display: flex;
+  justify-content: center;
+}
+.page-link{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+@media screen and (max-width: 1024px) {
   
 
   .board-card{
     width: 80%;
-    flex-direction: column;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-
+  }
+  .cardName {
+    width: 100%;
   }
   .cardImg{
     display: none;
@@ -82,30 +96,13 @@
   }
   .headerImg-quote .quote{
     display: none;
+  }
+  .birth-death-div{
+    width: 100%;
+  }
+  .cardDobDod{
+    font-size: small;
   }
 
 
 }
-/* @media screen and (min-width: 768px) , (max-width: 1025px) {
-  
-
-  .board-card{
-    width: 80%;
-    flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-
-  }
-  .cardImg{
-    display: none;
-  }
-
-  .headerImg-quote img{
-    height: 25%;
-  }
-  .headerImg-quote .quote{
-    display: none;
-  }
-
-
-} */
